link color contrast issue fixed for light theme

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -7,7 +7,7 @@
 :root {
   color-scheme: light;
   --color-font-main: #622500;
-  --color-font-link: #ee482f;
+  --color-font-link: #de1d00;
 
   --color-bg-main: #fffdf1;
   --color-bg-light: #f2f2f2;
